--- a/README
+++ b/README
@@ -1,5 +1,5 @@
-Generate and run locally:
-jekyll --server
+Generate and run locally with automatic regeneration:
+jekyll --server --auto
 
 Browse:
 http://localhost:4000
