--- a/_posts/2011-09-30-second-post.textile
+++ b/_posts/2011-09-30-second-post.textile
@@ -20,8 +20,8 @@ This page will probably be deleted.
 
 This is for a future page.
 
-Commit I have been involved with:
+Commits I have been involved with:
 
-* "https://github.com/masterkain/ImageMagick-sl/commit/1d0a5b8da4e54f68d0d4efaa7c460f59b19133cc":https://github.com/masterkain/ImageMagick-sl/commit/1d0a5b8da4e54f68d0d4efaa7c460f59b19133cc
-* "https://github.com/repoforge/rpms/commit/ccfbc98096701b94208a14f8084c028c13f44b31":https://github.com/repoforge/rpms/commit/ccfbc98096701b94208a14f8084c028c13f44b31
-* "https://github.com/repoforge/rpms/commit/0402c972d8b24e6ad3babb11a885b3f329b9aa20":https://github.com/repoforge/rpms/commit/0402c972d8b24e6ad3babb11a885b3f329b9aa20
+* "ImageMagick-sl - Upgrade to libpng-1.4.8 and ImageMagick-6.7.1-0":https://github.com/masterkain/ImageMagick-sl/commit/1d0a5b8da4e54f68d0d4efaa7c460f59b19133cc
+* "Rpmforge - Update to getmail version 4.20.4":https://github.com/repoforge/rpms/commit/ccfbc98096701b94208a14f8084c028c13f44b31
+* "rdiff-backup: Fix tabs/spaces in the popen patch":https://github.com/repoforge/rpms/commit/0402c972d8b24e6ad3babb11a885b3f329b9aa20
