--- a/_posts/2011-12-02-Commentary.textile
+++ b/_posts/2011-12-02-Commentary.textile
@@ -2,7 +2,15 @@
 layout: post
 ---
 
-h1. BlackBerry Playbooks in 2012
+h1(#gowalla). "Facebook acquires Gowalla":http://money.cnn.com/2011/12/02/technology/gowalla_facebook/
+
+bq. Facebook views takeovers as a good way to build up its talent bench.
+
+Maybe a year or so ago I remember looking up this "really annoying":http://getsatisfaction.com/gowalla/topics/gowalla_is_a_pain_in_my_arse bug that didn't allow you to block Gowalla from your Facebook feed.  It was the _only_ 3rd party app that couldn't be blocked.  I assumed at the time that Facebook was actually using Gowalla as a backend to Facebook Places.  In which case, acquiring Gowalla would be a natural fit (assuming I'm somewhat correct).
+
+</br>
+
+h1(#playbook). BlackBerry Playbooks in 2012
 
 RIM put out a "press release":http://press.rim.com/release.jsp?id=5267 today that they would record a "pre-tax provision" of approximately $485 million.  From what I understand that's just a fancy way of saying that they're taking a "writedown":http://en.wikipedia.org/wiki/Write-off#Writedown.  This is all due to an unsold "high level of BlackBerry inventory".
 
