--- a/_posts/2011-12-02-Commentary.textile
+++ b/_posts/2011-12-02-Commentary.textile
@@ -10,7 +10,7 @@ With Amazon selling its Kindle Fire tablet at a loss, the business model for the
 
 When the original iPad was first announced in late January 2010 the announcement that the base model price of $499 came as a shock to predictions which expected it to be around twice that price.  Every article I read in the lead up days and hours to the announcement had the pricing way off.  The aggressive pricing effectively killed off early competitors.
 
-As time goes by, manufacturing costs come down and by maintaining the same pricing, Apple realizes a higher profit margin per unit.  This gives them the option of dropping the price of the current iPad 2 when the next model of iPad is introduced, effectively lowering the gap between the bottom end $199 tablet price and their $499 entry level model.  This strategy was most recently employed when introducing the iPhone 4S and works well in not devaluing the price of their latest model.  That's what I think will happen.  Apple was so far ahead of the competition that they've haven't had to consider options like this so far.
+As time goes by, manufacturing costs come down and by maintaining the same pricing, Apple realizes a higher profit margin per unit.  This gives them the option of dropping the price of the current iPad 2 when the next model of iPad is introduced, effectively lowering the gap between the bottom end $199 tablet price and their $499 entry level model.  This strategy was most recently employed when introducing the iPhone 4S and works well in not devaluing the price of their latest model.  That's what I think will happen.  Apple was so far ahead of the competition with tablets that they've haven't had to consider options like this so far.
 
 I also believe that the iPad 3 will contain a retina display and new internals required to support the higher resolution.  Apple will attempt to bring out a model which is so technologically advanced that it will make it difficult for other manufactures to compete in the forseeable future.
 
