--- a/_posts/2011-12-07-Windows-Store-announcement-and-the-benefits-of-trials-for-apps.textile
+++ b/_posts/2011-12-07-Windows-Store-announcement-and-the-benefits-of-trials-for-apps.textile
@@ -7,7 +7,7 @@ h1. "{{ page.title}}":http://blogs.msdn.com/b/windowsstore/archive/2011/12/06/an
 
 I was checking out Windows Phone Marketplace last week and like other stores a lot of it is based on Apple's App Store.  I liked that it also had a yearly developer fee and apps needed to be approved.
 
-The main issue I see with Google's Android Market is the lack of those 2 elements which I believe only proliferates an abundances of poorly made apps.  App store approval isn't totally essential since in Google's mind, a human approval process isn't really something that can 'scale' and I can see the other positives to their non-approval requirements.  On the other hand, I really feel the one time $25 fee that Google's Android Market charges to developers should change.  I equate it to a one-time license to buy as main web site domains as you like.  A yearly fee increases the barriers to entry to developers who aren't committed to a platform.  Once the first year passes the developer will consider renewing.  If they are committed, they'll pay and a lot of the crap will drop off.  For example, an Apple App Store developer who does not make the the yearly developer fee of $99 in surrounding revenue for their apps or does not find any value in the $99 a year (through access to early Beta's and documentation, etc...) won't renew.  And that's a good thing.
+The main issue I see with Google's Android Market is the lack of those 2 elements which I believe only proliferates an abundance of poorly made apps.  App store approval isn't totally essential since in Google's mind, a human approval process isn't really something that can 'scale' and I can see the other positives to their non-approval requirements.  On the other hand, I really feel the one time $25 fee that Google's Android Market charges to developers should change.  I equate it to a one-time license to buy as main web site domains as you like.  A yearly fee increases the barriers to entry to developers who aren't committed to a platform.  Once the first year passes the developer will consider renewing.  If they are committed, they'll pay and a lot of the crap will drop off.  For example, an Apple App Store developer who does not make the the yearly developer fee of $99 in surrounding revenue for their apps or does not find any value in the $99 a year (through access to early Beta's and documentation, etc...) won't renew.  And that's a good thing.
 
 With the Windows Store announcement, I was interested to see that Windows is coupling their PC store with their tablet store.  I think this differentiation makes sense.  Currently there exists the Windows Phone Marketplace which is only for the phone platform.  With Apple, iOS (iPhone, iPod Touch and iPad's) apps are all on the "App Store" and Mac apps are on the "Mac App Store" which also makes sense.
 
