--- a/wiki/Convert_Stereo_to_Mono_with_Audacity.textile
+++ b/wiki/Convert_Stereo_to_Mono_with_Audacity.textile
@@ -7,7 +7,7 @@ permalink: Convert_Stereo_to_Mono_with_Audacity/index.html
 
 h1. {{ page.title }}
 
-Converting a stereo track to mono by:
+Here are the steps to convert a stereo track to mono:
 # Split the Stereo track.
 # Make both tracks mono.
 # Use the level control for each track, found on the left of the track to set to: "Gain: -6 dB". Then when you quick mix, it is guaranteed to not clip.
