--- a/_posts/2011-12-14-windows-phone-is-well-positioned-to-take-market-share-from-android.textile
+++ b/_posts/2011-12-14-windows-phone-is-well-positioned-to-take-market-share-from-android.textile
@@ -14,7 +14,7 @@ I like Microsoft's stance on software updates to Windows Phones.  They seem to b
 
 In comparison, Android has a "cumbersome":http://developer.sonyericsson.com/wp/2011/12/07/ice-cream-sandwich-from-source-code-release-to-software-upgrade/ upgrade process which involves heavy testing on the OEM and wireless carrier side.  Outside of the Nexus lines of phones, Google has effectively outsourced the testing and integration of Android updates to OEM's and carriers.
 
-I mentioned "previously":http://julianyap.com/2011/12/07/Windows-Store-announcement-and-the-benefits-of-trials-for-apps.html but I agree with how they have set up their Windows Store for apps.  Having an app approval process also helps to "keep out malware":http://blog.mylookout.com/blog/2011/12/11/european-premium-sms-fraud/.
+As "previously mentioned,":http://julianyap.com/2011/12/07/Windows-Store-announcement-and-the-benefits-of-trials-for-apps.html I agree with how they have set up their Windows Store for apps.  Having an app approval process also helps to "keep out malware":http://blog.mylookout.com/blog/2011/12/11/european-premium-sms-fraud/.
 
 Nokia "announced today":http://press.nokia.com/2011/12/14/t-mobile-brings-nokia-lumia-710-to-the-u-s/ that will sell their Nokia Lumia 710 phone for $49.99 (after a $50 mail-in-rebate card) on T-Mobile.  I anticipate heavy discounting of new Windows Phones in the coming year.
 
