Edit for clarity

--- a/_posts/2011-12-28-apple-wants-to-offer-you-a-revolutionary-television-experience.textile
+++ b/_posts/2011-12-28-apple-wants-to-offer-you-a-revolutionary-television-experience.textile
@@ -12,7 +12,7 @@ I like how Apple works with content providers on business models to deliver cont
 
 Apple has a general distaste for advertising as a core business model.  When it comes to volume, advertising is a very efficient business model but if you focus on quality, you can get more for less.  With the distribution power of the internet and the middleman taking less (or being eliminated altogether), we are entering into the phase of 'a little buys you a lot'.  The proposition for content providers as with iTunes and music is that they will make _more_ money then they currently do.
 
-What better way to disrupt television and advertising than to eliminate it altogether?
+What better way to disrupt television than by eliminating advertising altogether?
 
 bq. He said the obvious way Apple could allow this is to integrate with a cable or satellite subscription already offered to customers. 
 
