--- a/_posts/2011-08-16-it-looks-like-hps-touchpad-is-totally-screwed.textile
+++ b/_posts/2011-08-16-it-looks-like-hps-touchpad-is-totally-screwed.textile
@@ -2,9 +2,8 @@
 layout: post
 title: It looks like HP's TouchPad is totally screwed
 date: 2011-08-16 22:56
+post-link: http://allthingsd.com/20110816/ouchpad-best-buy-sitting-on-a-pile-of-unsold-hp-tablets/
 ---
-
-h1. "{{ page.title }}":http://allthingsd.com/20110816/ouchpad-best-buy-sitting-on-a-pile-of-unsold-hp-tablets/
 
 bq. Best Buy has taken delivery of 270,000 TouchPads and has so far managed to sell only 25,000, or less than 10 percent of the units in its inventory.
 
