--- a/_posts/2011-12-09-HP-to-Contribute-webOS-to-Open-Source.textile
+++ b/_posts/2011-12-09-HP-to-Contribute-webOS-to-Open-Source.textile
@@ -1,9 +1,8 @@
 ---
 layout: post
 title: HP to Contribute webOS to Open Source
+post-link: http://www.hp.com/hpinfo/newsroom/press/2011/111209xa.html
 ---
-
-h1. "{{ page.title }}":http://www.hp.com/hpinfo/newsroom/press/2011/111209xa.html
 
 bq. HP will make the underlying code of webOS available under an open source license. Developers, partners, HP engineers and other hardware manufacturers can deliver ongoing enhancements and new versions into the marketplace.
 
