--- a/_posts/2011-12-18-everyone-hates-google.textile
+++ b/_posts/2011-12-18-everyone-hates-google.textile
@@ -2,9 +2,8 @@
 layout: post
 title: Everyone Hates Google
 date: 2011-12-18 15:23
+post-link: http://fosspatents.blogspot.com/2011/12/british-telecom-sues-google-over-six.html
 ---
-
-h1. "{{ page.title }}":http://fosspatents.blogspot.com/2011/12/british-telecom-sues-google-over-six.html
 
 bq. After Apple, Oracle, Microsoft, and eBay, British Telecommunications plc has just become the fifth large publicly-traded company to bring patent infringement litigation against Android.
 
