--- a/_posts/2012-01-02-persistence.textile
+++ b/_posts/2012-01-02-persistence.textile
@@ -6,5 +6,5 @@ date: 2012-01-02 01:11
 
 bq. You know so if there's one thing I learned from him it's persistence.  To always get your vision out exactly how you planned it.  Remember how everybody's gonna view it but also not give a fuck about how people view it too.
 
-"Voyr":http://voyr.com is currently showing the episode "Church". A behind the scenes at the Watch The Throne concert tour.  Inspirational stuff.
+"Voyr":http://voyr.com is currently showing the episode "Church". A behind the scenes look at the Watch The Throne concert tour.  Inspirational stuff.
 
