--- a/_posts/2012-01-05-android-fanboys-are-out-of-touch-with-reality.textile
+++ b/_posts/2012-01-05-android-fanboys-are-out-of-touch-with-reality.textile
@@ -4,7 +4,7 @@ title: Android fanboys are out of touch with reality
 date: 2012-01-05 09:50
 ---
 
-The reality is, users want upgrades to their smartphone OS which is why more than "66% of iOS users now run iOS 5":http://www.readwriteweb.com/mobile/2012/01/more-than-66-of-users-have-upg.php.  Don't forget that the upgrade for iOS 4 to iOS 5 still required iTunes and a USB cable connected to your PC.  Would users go that much trouble if they didn't feel like OS upgrades were not important?  If OS upgrades weren't such an issue with Android you undoubtedly have more than "0.6% of users running Android 4.0":http://julianyap.com/2012/01/04/we-are-the-0-dot-6-percent.html.
+The reality is, users want upgrades to their smartphone OS which is why more than "66% of iOS users now run iOS 5":http://www.readwriteweb.com/mobile/2012/01/more-than-66-of-users-have-upg.php.  Don't forget that the upgrade for iOS 4 to iOS 5 still required iTunes and a USB cable connected to your PC.  Would users go that much trouble if they didn't feel like OS upgrades were not important?  If OS upgrades weren't such an issue with Android you undoubtedly would have more than "0.6% of users running Android 4.0":http://julianyap.com/2012/01/04/we-are-the-0-dot-6-percent.html.
 
 Just reading through some of the comments on "MG Siegler's post":https://plus.google.com/107753428759636856492/posts/eeBL4s5NsR7 you can see that many Android fanboys are out of touch with reality.  I think that the definition of a fanboy is someone who is totally irrational and distorts reality to suit their needs.
 
