--- a/_posts/2011-08-10-centos-6-minimal-install-cd-you-may-not-want-to-bother-with-it.textile
+++ b/_posts/2011-08-10-centos-6-minimal-install-cd-you-may-not-want-to-bother-with-it.textile
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: CentOS 6 minimal install CD. You may not want to bother with it.
+title: CentOS 6 minimal install CD - You may not want to bother with it
 date: 2011-08-10 22:40
 post-link: http://lists.centos.org/pipermail/centos-announce/2011-July/017660.html
 ---
