--- a/_posts/2012-01-05-active-use-and-adoption-of-siri-definitely-not-hype.textile
+++ b/_posts/2012-01-05-active-use-and-adoption-of-siri-definitely-not-hype.textile
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Active use and adoption of Siri. Definitely not hype.
+title: Active use and adoption of Siri - Definitely not hype
 date: 2012-01-05 23:22
 post-link: http://www.bloomberg.com/news/2012-01-06/apple-s-voice-recognition-siri-doubles-iphone-data-volumes.html
 ---
