--- a/_posts/2012-01-19-apples-ibooks-2.textile
+++ b/_posts/2012-01-19-apples-ibooks-2.textile
@@ -9,5 +9,5 @@ bq. Apple wants us to ditch the paperback and hardcover textbooks in favor of an
 
 It helps to deliver rich multimedia experiences when you have a standardized form factor like you have with the iPad.  iOS developers have experienced this since the App Store opened which is why iOS apps are known for their pixel perfect designs.  "Interactive 3-D models, photos, videos and diagrams" all play to the iPad's strengths compared to dedicated book readers which rely on E Ink technology.  For these reasons (standardization and multimedia), Apple won't be releasing a 7" iPad nor will they release an E Ink eBook reader any time soon.
 
-A great strenth of Apple's is that of forging partnerships with existing players to form a win-win situation.  With the benefits of digital content, the extra costs of physical distribution no longer exist.  With the cost savings you then have more than enough money to go around and existing players do not need to be "extinguished":http://pandodaily.com/2012/01/17/confessions-of-a-publisher-were-in-amazons-sights-and-theyre-going-to-kill-us/.  This means that given the right model, all parties (except those such as book stores that rely solely on the existence physical distribution) including end users stand to benefit and the eventual transition to digital distribution is one that does not need to be fought over but embraced.
+A great strenth of Apple's is that of forging partnerships with existing players to form a win-win situation.  With the benefits of digital content, the extra costs of physical distribution no longer exist.  With the cost savings you then have more than enough money to go around and existing players do not need to be "extinguished":http://pandodaily.com/2012/01/17/confessions-of-a-publisher-were-in-amazons-sights-and-theyre-going-to-kill-us/.  This means that given the right model, all parties (except those such as book stores that rely solely on the existence of physical distribution) including end users stand to benefit and the eventual transition to digital distribution is one that does not need to be fought over but embraced.
 
