--- a/_posts/2012-01-24-apples-1q-2012-results.textile
+++ b/_posts/2012-01-24-apples-1q-2012-results.textile
@@ -9,7 +9,7 @@ Apple just released its 1Q 2012 financial results which "totally destroyed all e
 
 Just to put that in perspective, Google had revenues of $37.905 billion for the "whole of 2011":http://investor.google.com/pdf/2011Q4_earnings_google.pdf.
 
-In the Q and A session Tim Cook mentioned that they had 85 million users sign up to iCloud in 3 months.  Comparatively Larry Page mention in Google's "recent earnings call":http://investor.google.com/earnings/2011/Q4_google_earnings.html that there were 90 million users on Google+.  The adoption rate for iCloud just shows you the strength of the robust upgrade system of iOS which allows them to push through features such as iCloud to their users on a massive scale.
+In the Q and A session Tim Cook mentioned that they had 85 million users sign up to iCloud in 3 months.  Comparatively Larry Page mentioned in Google's "recent earnings call":http://investor.google.com/earnings/2011/Q4_google_earnings.html that there were 90 million users on Google+.  The adoption rate for iCloud just shows you the strength of the robust upgrade system of iOS which allows them to push through features such as iCloud to their users on a massive scale.
 
 Tim Cook also underlined Apple's belief in the iPad.  Apple throughly believes that the tablet market will eventually surpass the desktop PC market and Tim mentioned a recent report which had figures showing that tablets sales have already exceeded those of desktop PC's in the U.S. in the fourth quarter.  He followed on by saying that in terms of the tablet market, the iPad really stood out in a class of its own.  A key figure that Tim mentioned to show the dominance of the iPad ecosystem is that there are 170,000 apps written specifically for the iPad compared to only a few hundred designed specifically for competing tablet platforms.
 
