--- a/_posts/2012-01-24-apples-1q-2012-results.textile
+++ b/_posts/2012-01-24-apples-1q-2012-results.textile
@@ -11,7 +11,7 @@ Just to put that in perspective, Google had revenues of $37.905 billion for the 
 
 In the Q and A session Tim Cook mentioned that they had 85 million users sign up to iCloud in 3 months.  Comparatively Larry Page mentioned in Google's "recent earnings call":http://investor.google.com/earnings/2011/Q4_google_earnings.html that there were 90 million users on Google+.  The adoption rate for iCloud just shows you the strength of the robust upgrade system of iOS which allows them to push through features such as iCloud to their users on a massive scale.
 
-Tim Cook also underlined Apple's belief in the iPad.  Apple throughly believes that the tablet market will eventually surpass the desktop PC market and Tim mentioned a recent report which had figures showing that tablets sales have already exceeded those of desktop PC's in the U.S. in the fourth quarter.  He followed on by saying that in terms of the tablet market, the iPad really stood out in a class of its own.  A key figure that Tim mentioned to show the dominance of the iPad ecosystem is that there are 170,000 apps written specifically for the iPad compared to only a few hundred designed specifically for competing tablet platforms.
+Tim Cook also underlined Apple's belief in the iPad.  Apple thoroughly believes that the tablet market will eventually surpass the desktop PC market and Tim mentioned a recent report which had figures showing that tablets sales have already exceeded those of desktop PC's in the U.S. in the fourth quarter.  He followed on by saying that in terms of the tablet market, the iPad really stood out in a class of its own.  A key figure that Tim mentioned to show the dominance of the iPad ecosystem is that there are 170,000 apps written specifically for the iPad compared to only a few hundred designed specifically for competing tablet platforms.
 
-It was interesting to note that Tim Cook also mentioned Apple sold 1.4 million Apple TV units in the quarter.  I believe this is the first time Apple has released any Apple TV figures but this figure compares quite favorably to similar competing units such as Roku which reported sold "1.5 million units last year":http://www.splatf.com/2012/01/roku-sales-2011/.
+It was interesting to note that Tim Cook also mentioned that Apple sold 1.4 million Apple TV units in the quarter.  I believe this is the first time Apple has released any Apple TV figures but this figure compares quite favorably to similar competing units such as Roku which reported sold "1.5 million units last year":http://www.splatf.com/2012/01/roku-sales-2011/.
 
