--- a/_posts/2012-01-25-2012-the-year-that-apple-remains-the-largest-us-company.textile
+++ b/_posts/2012-01-25-2012-the-year-that-apple-remains-the-largest-us-company.textile
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 2012 the year that Apple remains the largest US company by a good margin
+title: 2012 - The year that Apple remains the largest US company by a good margin
 date: 2012-01-25 13:39
 ---
 
@@ -10,11 +10,11 @@ Based on yesterday's earnings call, many Wall Street analysts have now "adjusted
 
 The difference this time around is that Exxon Mobil is currently trading around their 52 week high of around $87 a share.  Their highest share price in the past 10 years was in December 2007 during record oil barrel prices where Exxon Mobil traded at $95 a share.
 
-Even if we give a conservative estimate of Apple reaching $500 a share in the near term and trading at that price and above for a large portion of 2012, we come out the following:
+Even if we give a conservative estimate of Apple reaching $500 a share in the near term and trading at that price and above for a large portion of 2012, we come out with the following:
 
 $500 share price x 932.21 million shares = $466.105 billion market cap
 
-Exxon Mobil's share price would need to reach an all time of over $103 a share to even compare with that.
+Exxon Mobil's share price would need to reach an all time high of over $103 a share to even compare with that.
 
 2012 is the year that Apple remains the largest US company by a good margin.
 
