--- a/_posts/2012-02-02-mark-zuckerbergs-desk.textile
+++ b/_posts/2012-02-02-mark-zuckerbergs-desk.textile
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Mark Zuckerberg's desk
+title: Mark Zuckerberg's desk at Facebook
 date: 2012-02-02 11:55
 post-link: https://www.facebook.com/photo.php?fbid=10100230247154651
 ---
