--- a/pages/archives.textile
+++ b/pages/archives.textile
@@ -5,20 +5,22 @@ title: Archives
 
 h1. {{ page.title }}
 
+<div id="related">
 <ul class="posts">
   {% for post in site.posts %}
 
     {% unless post.next %}
-      <h3>{{ post.date | date: '%Y' }}</h3>
+      <h1>{{ post.date | date: '%Y' }}</h1>
     {% else %}
       {% capture year %}{{ post.date | date: '%Y' }}{% endcapture %}
       {% capture nyear %}{{ post.next.date | date: '%Y' }}{% endcapture %}
       {% if year != nyear %}
-        <h3>{{ post.date | date: '%Y' }}</h3>
+      <br>
+        <h1>{{ post.date | date: '%Y' }}</h1>
       {% endif %}
     {% endunless %}
 
     <li><span class="post_date">{{ post.date | date_to_string }}</span> &raquo; <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
   {% endfor %}
 </ul>
-
+</div>
