--- a/_posts/2012-02-15-ios-app-access-to-contact-data-will-require-explicit-user-permission.textile
+++ b/_posts/2012-02-15-ios-app-access-to-contact-data-will-require-explicit-user-permission.textile
@@ -9,5 +9,5 @@ bq. “Apps that collect or transmit a user’s contact data without their prior
 
 A fair and reasonable response from Apple.
 
-In terms of usability and actual user comprehension, I believe the alert box is the best way to tell users that a certain permission (such as permissions to Location and Twitter account details) is required. The main difference with iOS and Android is that iOS asks you for permission when you are performing a task which requires the permission at that time.  If you never use a particular feature of an app which requires the Address Book permissions, you won't be asked for that permission.  Android asks you for permission(s) upon app installation which are usually blindly clicked through by users who just want to start using the app they downloaded.
+In terms of usability and actual user comprehension, I believe the alert box is the best way to ask users that a certain permission (such as permissions for Location and Twitter account details) is required. The main difference with iOS and Android is that iOS asks you for permission when you are performing a task which requires the permission at that time.  If you never use a particular feature of an app which requires the Address Book permissions, you won't be asked for that permission.  Android asks you for permission(s) upon app installation which are usually blindly clicked through by users who just want to start using the app they downloaded.
 
